force-app/main/default/objects/vlocity_ins__FinancialStatementLineItem__c/fields/vlocity_ins__FinancialStatementId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FinancialStatementId__c</fullName>
    <label>Financial Statement</label>
    <referenceTo>vlocity_ins__FinancialStatement__c</referenceTo>
    <relationshipLabel>Financial Statement Line Items</relationshipLabel>
    <relationshipName>FinancialStatementLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>