force-app/main/default/objects/vlocity_ins__FinancialStatementLineItem__c/fields/vlocity_ins__SpecProductId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SpecProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Item Spec</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Financial Statement Line Items</relationshipLabel>
    <relationshipName>FinancialStatementLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>